# Gloss

./: .gitignore  ADR.md  PRD.md  pyproject.toml
docs/: phase1-text-engine.md  phase2-visual-ondemand.md  phase3-region-watch.md  phase4-dashboard.md
phase0/: .env.example  README.md  config.example.json  directory-structure.md  model-profiles.json  verification-note-template.md
phase0/evidence/2026-06-09-real-device/: README.md  backend-log-excerpt.txt  bench-phi-3.5-mini-summary.txt  openai-phi-3.5-mini.jsonl
phase0/verification-notes/: 2026-06-09-real-device.md
samples/phase1/: cp949-korean.txt  long-text.txt  sample-page.html
scripts/phase0/: collect_windows_env.ps1  common.ps1  measure_openai_backend.py  phase0_common.py  run_model_profile.ps1
scripts/phase2/: capture_screen_rect.ps1
scripts/phase3/: ocr_image_text.ps1
src/gloss/: __init__.py  config.py  env.py  log.py  metrics.py  system.py
src/gloss/backend/: __init__.py  openai_client.py  probe.py
src/gloss/dashboard/: aggregate.py  cli.py  live.py
src/gloss/overlay/: __init__.py  tk_overlay.py
src/gloss/text/: __init__.py  cli.py  engine.py  extractors.py
src/gloss/visual/: __init__.py  capture.py  cli.py  engine.py  models.py  ocr.py  watch.py  (+1 more)
tests/: test_backend_probe.py  test_dashboard_aggregate.py  test_dashboard_cli.py  test_dashboard_live.py  test_openai_client.py  test_region_watch.py  test_runtime_config.py  test_system_metrics.py  test_text_cli.py  test_text_extraction.py  test_visual_cli.py  test_visual_engine.py  test_visual_models.py  test_visual_ocr.py  test_watch_cli.py
