[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gloss"
version = "0.1.0"
description = "On-device translation overlay for Windows ARM64 NPU workflows."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gloss-text = "gloss.text.cli:main"
gloss-visual = "gloss.visual.cli:main"
gloss-watch = "gloss.visual.watch_cli:main"
gloss-dashboard = "gloss.dashboard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
